# flat-rpc

./: Cargo.toml  origin.bfn
src/: codegen_rs.rs  codegen_ts.rs  grammar.pest  ir.rs  main.rs  parser.rs  typechecker.rs
