[package]
name = "flat-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
pest = "2.1.3"
pest_derive = "2.1.0"
colored = "2.0.0"
convert_case = "0.5.0"
quote = "1.0.18"
